--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,5 @@ tags
 
 # End of https://www.gitignore.io/api/python,django,virtualenv
 # Generated using ignr.py - github.com/Antrikshy/ignr.py
+
+data
